fix: wrong color manipulation

--- a/_app/assets/_scss/_user.scss
+++ b/_app/assets/_scss/_user.scss
@@ -38,6 +38,9 @@
 // EXAMPLE: amsf.github.io custom appearance
 //
 $link-color: #ff00b4;
+:root {
+  --link-color: #ff00b4;
+}
 
 .content .sub-title {
   font-size: 108%;
